# code-test

./: .gitignore  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md
src/: graph.py  graph_multiagent.py  graph_streaming.py  index.ts  llm.py  main.py  tools.py
src/agents/: __init__.py  file_agent.py  shell_agent.py  supervisor.py
src/config/: config.ts
src/graphs/: __init__.py  base.py  multiagent.py  streaming.py
src/llm/: __init__.py  factory.py  ollama.py  ollama_lifecycle.py
src/providers/: index.ts
src/session/: session.ts
src/tools/: __init__.py  file_tools.py  index.ts  shell_tools.py
src/tui/: App.tsx  MessageItem.tsx  types.ts
